--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,19 @@
         android:theme="@style/Theme.NavRouteFinder"
         tools:targetApi="31">
         <activity
-            android:name=".auth.Signup"
+            android:name=".auth.ui.Signup"
             android:exported="false" />
         <activity
-            android:name=".auth.Login"
-            android:exported="false" />
+            android:name=".auth.ui.Login"
+            android:exported="true" >
+
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+</activity>
+
         <activity
             android:name=".ui.Dashboard"
             android:exported="false" />
@@ -29,6 +37,9 @@
         <meta-data
             android:name="com.google.android.gms.auth.api.credentials.CredentialsApi"
             android:value="true" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
     </application>
 
 </manifest>
